--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
+    "@ngx-mxflame/atoms": "^1.0.9",
     "json-server": "^0.17.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
