--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/colorthief/dist/color-thief.min.js"
+            ]
           },
           "configurations": {
             "production": {
