--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2",
-    "webpack": "^5.0.0"
+    "postcss-loader": "4.2.0"
   }
 }
