--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.2",
-    "postcss-loader": "4.2.0"
+    "typescript": "~4.1.2"
   }
 }
