--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -44,7 +44,7 @@ server {
     <% end %>
 
     location / {
-        root   /usr/share/nginx/html;
+        root   /usr/share/nginx/html/gramificacion-front;
         index  index.html index.htm;
     }
 
