se agrega la configuracion de ngnix

--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -48,6 +48,15 @@ server {
         index  index.html index.htm;
     }
 
+    location /api/session {
+        proxy_pass https://nginx-gamification-mx-gamification-dev.appls.mex01.mex.dev.mx1.paas.cloudcenter.corp/api/session;
+    }
+
+    location /credits/v2/credits {
+        proxy_pass http://nginx-gamification-mx-gamification-dev.appls.mex01.mex.dev.mx1.paas.cloudcenter.corp/credits/v2/credits
+    }
+
+
 
     error_page  400 401 403 404  /40x.html;
     location = /40x.html {
