--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -33,15 +33,15 @@ server {
 
     <% end %>
 
-    # <% if ENV["SERVICE_ENDPOINT"] %>
-        
-    #     location /console-service {
-    #         proxy_redirect off;
-    #         proxy_pass <%= ENV["SERVICE_ENDPOINT"] %>;
-    #         proxy_http_version  1.1;
-    #     }
+    <% if ENV["SERVICE_ENDPOINT"] %>
 
-    # <% end %>
+        location /console-service {
+            proxy_redirect off;
+            proxy_pass <%= ENV["SERVICE_ENDPOINT"] %>;
+            proxy_http_version  1.1;
+        }
+    
+    <% end %>
 
     location / {
         root   /usr/share/nginx/html/gramificacion-front;
@@ -68,7 +68,7 @@ server {
     location /credits/v2/credits {
         proxy_pass https://nginx-gamification-mx-gamification-dev.appls.mex01.mex.dev.mx1.paas.cloudcenter.corp/credits/v2/credits;   
     }
-    
+
     location /status/health_check {
        add_header "Content_Type" "application/json";
        return 200 "{\"UP\":\"OK\"}";
