se agrega proxy para consumir servicios dev en local

--- a/angular.json
+++ b/angular.json
@@ -55,8 +55,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -85,6 +84,14 @@
                   "maximumError": "4kb"
                 }
               ]
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
             }
           }
         },
@@ -96,8 +103,13 @@
           "configurations": {
             "production": {
               "browserTarget": "gramificacion-front:build:production"
+            },
+            "development": {
+              "browserTarget": "gramificacion-front:build:development",
+              "proxyConfig": "proxy.conf.js"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
