--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -16,9 +16,9 @@ server {
     client_header_buffer_size   8k;
     large_client_header_buffers 8 64k;
     # SSL protocol
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
+    #ssl_protocols TLSv1.2 TLSv1.3;
+    #ssl_prefer_server_ciphers on;
+    #ssl_ciphers EECDH+AESGCM:EDH+AESGCM;
     # Headers
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
     add_header X-Frame-Options SAMEORIGIN;
