--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -25,7 +25,11 @@ server {
     add_header 'Referrer-Policy' 'origin';
     add_header X-Content-Type-Options nosniff;
 	add_header X-XSS-Protection "1; mode=block" always;
-    proxy_hide_header X-Frame-Options;
+    #proxy_hide_header X-Frame-Options;
+    add_header X-Frame-Options "DENY";
+
+    # CSP Configuration
+    add_header Content-Security-Policy "default-src 'self';" always;
 
     location /nginx_status {
         stub_status on;
