--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -29,7 +29,8 @@ server {
     add_header X-Frame-Options "DENY";
 
     # CSP Configuration
-    add_header Content-Security-Policy "default-src 'self';" always;
+    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline';" always;
+    
 
     location /nginx_status {
         stub_status on;
