Se cambia el inlineCritical en el angular.json a false

--- a/angular.json
+++ b/angular.json
@@ -41,6 +41,7 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
+              "inlineStyleLanguage": "css",
               "optimization": {
                 "scripts": true,
                 "styles": {
