--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -25,11 +25,25 @@ server {
     add_header 'Referrer-Policy' 'origin';
     add_header X-Content-Type-Options nosniff;
 	add_header X-XSS-Protection "1; mode=block" always;
-    #proxy_hide_header X-Frame-Options;
+    # Frames
     add_header X-Frame-Options "DENY";
+    # HTTP methods
+	add_header Access-Control-Allow-Methods "GET, POST" always;
 
-    # CSP Configuration
-    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline';" always;
+    # CSP Configuration    
+    add_header Content-Security-Policy "default-src 'self' ;
+                                      script-src 'self' 'unsafe-inline' 'unsafe-eval';
+                                      style-src 'self' 'unsafe-inline';
+                                      object-src 'none';
+                                      base-uri 'self';
+                                      connect-src 'self';
+                                      font-src 'self' data:;
+                                      frame-src 'self';
+                                      img-src 'self' data:;
+                                      manifest-src 'self';
+                                      media-src 'self';
+                                      worker-src 'none';
+									  frame-src 'self'" always;
     
 
     location /nginx_status {
