--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -42,8 +42,7 @@ server {
                                       img-src 'self' data:;
                                       manifest-src 'self';
                                       media-src 'self';
-                                      worker-src 'none';
-									  frame-src 'self'" always;
+                                      worker-src 'none';" always;
     
 
     location /nginx_status {
