--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -31,7 +31,7 @@ server {
 	add_header Access-Control-Allow-Methods "GET, POST" always;
 
     # CSP Configuration    
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; object-src 'none'; base-uri 'self'; connect-src 'self'; font-src 'self' data:; frame-src 'self'; img-src 'self' data:; manifest-src 'self'; media-src 'self'; worker-src 'none';" always;
+    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; object-src 'none'; base-uri 'self'; worker-src 'none';" always;
     
 
     location /nginx_status {
