--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -30,9 +30,9 @@ server {
     # HTTP methods
 	add_header Access-Control-Allow-Methods "GET, POST" always;
 
-    # CSP Configuration    
+    # CSP Configuration
     add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; object-src 'none'; base-uri 'self'; worker-src 'none';" always;
-    
+
 
     location /nginx_status {
         stub_status on;
@@ -43,6 +43,7 @@ server {
     }
 
     location / {
+        try_files $uri $uri/ /index.html;
         root   /usr/share/nginx/html/gramificacion-front;
         index  index.html index.htm;
     }
@@ -63,7 +64,7 @@ server {
         proxy_set_header  Authorization $http_authorization;
         proxy_pass_header Authorization;
     }
-    
+
     location /credits/v2/credits {
         proxy_pass <%= ENV["CREDITS_SERVICE_URL"] %>;
     }
